# static-image-gallery

./: .gitignore  pyproject.toml  readme.md
src/: custom_types.py  gallery_lib.py  generate_html.py  html.py  rescan.py  scan.py  schema.py
templates/: index.html
